# FinancialAgent

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  e2e_chart_removed.py  e2e_data_quality.py  e2e_day_change.py  e2e_disclaimer.py  e2e_holding_modal_drag.py  e2e_intent_disclaimer.py  e2e_last_updated.py  e2e_mark_executed.py  e2e_modal_lang_fix.py  e2e_refresh_premarket.py  e2e_research_panel.py  e2e_resize_columns.py  e2e_session_badge.py  e2e_sidebar_preview.py  e2e_w2_full_flow.py  e2e_watchlist_chart.py  e2e_watchlist_stale.py
backend/: .env.base  .env.example  pyproject.toml
backend/data/: sector_universe.csv  tickers_directory.csv
backend/scripts/: analyze_deep_run.py  backfill_translations.py  build_sector_universe.py  build_tickers_directory.py  check_db.py  clean_empty_chat_shells.py  cleanup_dirty_translations.py  migrate_order_intent.py  refresh_holding_prices.py  repair_inverted_zh.py  run_pnl_snapshots.py  test_repositories.py  topup_credits.py
backend/src/: main.py
backend/src/agent/: context.py  debate_types.py  deep_agent_adapter.py  deep_react_agent.py  langgraph_react_agent.py  llm_client.py  llm_factory.py  subagent_invoker.py
backend/src/agent/experiments/: __init__.py  exp_hybrid_deep_agent.py  test_deepagent_qwen.py
backend/src/agent/optimizer/: executor.py
backend/src/agent/portfolio/: agent.py  consistency_gate.py  context_builder.py  flows.py  phase1_research.py  phase2_decisions.py  phase3_execution.py  risk_calculator.py  universe_filter.py
backend/src/agent/skills/: README.md  __init__.py
backend/src/agent/subagents/: __init__.py  debater.py  financial.py  news.py  technical.py
backend/src/agent/tools/: __init__.py  _yf_fallback.py  analysis_cache.py  categorization.py  exa_tools.py  yfinance_tools.py
backend/src/api/: admin.py  auth.py  health.py  portfolio_admin.py  translate.py  watchlist.py
backend/src/api/analysis/: fibonacci.py  history.py  macro.py  news.py  technical.py
backend/src/api/chat/: endpoints.py
backend/src/api/dependencies/: auth.py  chat_deps.py  feedback_deps.py  portfolio_deps.py
backend/src/api/market/: fundamentals.py  prices.py  search.py  status.py
backend/src/api/portfolio/: __init__.py  chats.py  decisions.py  history.py  holdings.py  orders.py  transactions.py  user_transactions.py
backend/src/api/schemas/: chat_models.py  deep_agent_events.py  portfolio_models.py
backend/src/core/: config.py  local_user.py  localization.py  observability.py
backend/src/core/analysis/: macro_analyzer.py  stochastic_analyzer.py
backend/src/core/data/: ticker_data_service.py
backend/src/core/utils/: token_utils.py
backend/src/data/: sector_universe.py  tickers_directory.py
backend/src/database/repositories/: __init__.py  chat_repository.py  holding_repository.py  message_repository.py  portfolio_order_repository.py  tool_execution_repository.py  user_repository.py  user_transaction_repository.py  watchlist_repository.py
backend/src/models/: __init__.py  chat.py  derivations.py  holding.py  message.py  portfolio.py  portfolio_analysis.py  source.py  tool_execution.py  trading_decision.py  user.py  user_transaction.py  watchlist.py
backend/src/services/: chat_service.py  context_window_manager.py  holdings_ledger.py  order_execution_service.py  oss_service.py  persistence_translator.py  pnl_service.py  translation_service.py
backend/src/services/data_manager/: keys.py  manager.py  types.py
backend/src/services/finnhub/: __init__.py  service.py
backend/src/services/formatters/: __init__.py  base.py  fundamentals.py  technical.py
backend/src/services/insights/: models.py
backend/src/services/market_data/: bars_extended.py  fundamentals.py  fundamentals_av.py  quotes.py  yfinance_bars.py  yfinance_fundamentals.py  (+3 more)
backend/tests/: e2e_deep_react.py  e2e_source_footnote.py  probe_token_metadata.py  smoke_cross_vendor.py  test_admin_api.py  test_alphavantage_market_data_service.py  test_analysis_cache.py  test_backfill_translations.py  test_chat_repository.py  test_chat_service.py  test_cleanup_dirty_translations.py  test_consistency_gate.py  test_data_manager.py  test_data_manager_ext_hours_enrichment.py  test_data_manager_fallback.py  test_debate_integration.py  test_debate_types.py  test_debater_subagent.py  test_decision_research_blocks.py  test_deep_agent_events.py  test_derivations.py  test_exa_tools.py  test_extended_hours_companion.py  test_extended_hours_price.py  test_fibonacci_sanity_gate.py  test_finnhub_quote_source_wrap.py  test_finnhub_service.py  test_flows_phase2_lang.py  test_form4_fetcher.py  test_form4_parser.py  test_form4_real.py  test_fundamentals_fallback.py  test_fundamentals_source_wrap.py  test_holding_repository.py  test_holdings_crud.py  test_insider_enrich.py  test_insider_tool_source_wrap.py  test_intent_real_phase2.py  test_market_data_quotes.py  test_market_session_boundaries.py  (+32 more)
docs/: FAQ.md  (+2 more)
(+212 files in other folders)
